# target-notion

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
target_notion/: __init__.py  __main__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
