[project]
name = "ticketswap-target-notion"
version = "0.0.1"
description = "Singer target for notion, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Tobias C Cadee", email = "tobias.cadee@ticketswap.com" }]
keywords = [
    "ELT",
    "notion",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dependencies = [
    "singer-sdk~=0.46.3",
    "requests~=2.32.3",
    "notion-client>=2.3.0",
    "case-converter>=1.2.0",
    "retry>=0.9.2",
]

[project.optional-dependencies]
s3 = [
    "fs-s3fs~=1.1.1",
]

[project.scripts]
# CLI declaration
target-notion = 'target_notion.target:Targetnotion.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "pytest-github-actions-annotate-failures>=0.3",
    "singer-sdk[testing]",
]
[tool.hatch.build.targets.wheel]
packages = [
    "target_notion",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"
